--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "firebase": "^11.2.0",
     "json-server": "^1.0.0-beta.3",
     "keep-react": "^1.6.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.1.1",
