--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.2.0",
     "json-server": "^1.0.0-beta.3",
     "keep-react": "^1.6.1",
+    "motion": "^12.0.6",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
