--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-headroom": "^3.2.1",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.1.1",
